--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
               <tbody id="book-list"></tbody> <!-- Dynamically inserts rows -->
           </table>
       </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="appes6.js"></script>
   </body>
 </html>
